Archive2/ac/a81e19aeed811e/output
main.cpp:60:6: error: no type named 'st' in namespace 'std'
std::st
~~~~~^
main.cpp:61:4: error: expected unqualified-id
   return 0;
   ^
main.cpp:62:1: error: extraneous closing brace ('}')
}
^
3 errors generated.
